# collocations-generator

./: LICENSE  README.md  collocations_chatgpt_api.py  pyproject.toml  youtube_transcript.py
Markdown/: [Sample]IELTS_2025-11-17.md
transcript/: [Sample]What's being done to save the Amazon rainforest? - What in the World podcast, BBC World Service.txt
