[project]
name = "youtube-transcript"
version = "0.1.0"
description = ""
authors = [
    {name = "Chuan-Tung-Cheng",email = "chengreentea0813@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<=3.14"
dependencies = [
    "youtube-transcript-api (>=1.2.3,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "lxml (>=6.0.2,<7.0.0)",
    "openai (>=2.8.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
